HREPTWO-2657: UI: When a document opened in the editor contains a lot of tags in the right column, the widgets in the center column are rendered 200px too low http://issues.onehippo.com/browse/HREPTWO-2657 - td vertical-align set to top
svn path=/hippo-ecm/trunk/; revision=18449

--- a/cms/package/skin/src/main/webapp/screen.css
+++ b/cms/package/skin/src/main/webapp/screen.css
@@ -1124,3 +1124,7 @@ div.hippo-controlpanel-actions-top{border-bottom: 1px solid #afafaf; border-top:
   color: #333333;
   padding-top: 2px;
 }
+
+table.hippo-defaultcontent td {
+  vertical-align: top;
+}
